# grdy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  release.sh  todo.md
.claude/: settings.json
.github/workflows/: release.yml
scripts/: update-homebrew.sh
src/: main.rs
src/snapshots/: grdy__tests__render_table__ansi_colored_values.snap  grdy__tests__render_table__multiple_rows.snap  grdy__tests__render_table__multiple_rows_plain.snap  grdy__tests__render_table__multiple_rows_with_stripe.snap  grdy__tests__render_table__multiple_rows_with_styling.snap  grdy__tests__render_table__nested_values.snap  grdy__tests__render_table__single_row.snap  grdy__tests__render_table__single_row_ascii.snap  grdy__tests__render_table__single_row_compact.snap  grdy__tests__render_table__single_row_plain.snap  grdy__tests__render_table__sparse_data.snap
