[package]
name = "grdy"
version = "0.2.0"
edition = "2024"
description = "Griddy - a CLI tool to render JSON data as tables"
license = "BSD-3-Clause"
repository = "https://github.com/chrismo/grdy"

[[bin]]
name = "grdy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[dev-dependencies]
insta = "1"
